# .yadr

./: LICENSE  README.md  flake.nix  install.sh
darwin/: configuration.nix
dotfiles/: .gitconfig  install.sh
dotfiles/alacritty/: alacritty.toml
dotfiles/fuzzel/: fuzzel.ini
dotfiles/kanshi/: config
dotfiles/nvim/: init.lua  lazy-lock.json
dotfiles/pyprland/: pyprland.toml
dotfiles/sway/: config
dotfiles/waybar/: config.jsonc  style.css
home-manager/: default.nix  home.nix  hyprland.nix
home-manager/machines/: default.nix
home-manager/modules/: neovim.nix
home-manager/parts/: media.nix  social.nix  uni.nix  utils.nix  vscode.nix
home/toffer/: default.nix  torpedo.nix  whackbook.nix
host/lappietoppie/: boot.nix  default.nix  fonts.nix  hardware-configuration.nix  hardware.nix  networking.nix  services.nix  users.nix
host/torpedo/: default.nix
host/whackbook/: default.nix  users.nix
hosts/: configuration.nix  default.nix  home.nix
hosts/laptop/: default.nix  hardware-configuration.nix
modules/desktops/: default.nix  gnome.nix
modules/editors/: default.nix  nvim.home.nix  nvim.nix
modules/programs/: default.nix  rstudio.nix  tmux.nix
nixos/: configuration.nix  hardware-configuration.nix
operating-systems/: configuration.nix
overlays/: default.nix
pkgs/: dagger.nix  default.nix  pydo.nix
scripts/: fetch-alacritty-themes.sh  install-brew-pkgs.sh  zen-browser.sh
shells/: stan.nix
system/: common.nix  darwin.nix  home.nix  nixos.nix
templates/python/poetry/: .pre-commit-config.yaml  flake.nix  pyproject.toml
(+202 files in other folders)
